--- a/CampaignsConnections.html
+++ b/CampaignsConnections.html
@@ -330,7 +330,7 @@
       </a>
     </li>
     <li>
-      <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+      <a href="./CampaignsAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
         <img src="./assets/svgs/AdGroups.svg" class="w-6 h-6 mr-2" alt="Ad Groups">
         <span data-link-label>Ad Groups</span>
       </a>
