--- a/CampaignsAdGroup.html
+++ b/CampaignsAdGroup.html
@@ -82,6 +82,99 @@
       pointer-events: none;
     }
     select[aria-readonly="true"]:focus { border: none !important; outline: none !important; box-shadow: none !important; }
+
+    .search-container {
+      position: relative;
+      display: flex;
+      align-items: center;
+    }
+
+    .search-wrapper {
+      position: relative;
+      display: flex;
+      align-items: center;
+      border-radius: 0.375rem;
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+      height: 40px;
+      width: 50px;
+      overflow: hidden;
+    }
+
+    .search-wrapper.expanded {
+      width: 300px;
+    }
+
+    .search-icon {
+      position: absolute;
+      left: 5px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      z-index: 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: opacity 0.2s ease;
+    }
+
+    .search-icon svg {
+      width: 20px;
+      height: 20px;
+      fill: #666;
+    }
+
+    .search-input {
+      width: 100%;
+      height: 100%;
+      border: none;
+      outline: none;
+      background: transparent;
+      padding: 8px 40px 8px 40px;
+      font-size: 14px;
+      color: #333;
+      opacity: 0;
+      transition: opacity 0.2s ease 0.1s;
+    }
+
+    .search-input::placeholder {
+      color: #999;
+    }
+
+    .search-wrapper.expanded .search-input {
+      opacity: 1;
+      background-color: white;
+      height: 80%;
+      border: #c5c4c4 1px solid;
+      border-radius: .375rem;
+    }
+
+    .clear-button {
+      position: absolute;
+      right: 10px;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.2s ease;
+      z-index: 2;
+    }
+
+    .clear-button svg {
+      width: 100%;
+      height: 100%;
+      fill: #666;
+    }
+
+    .clear-button:hover svg {
+      fill: #333;
+    }
+
+    .clear-button.visible {
+      opacity: 1;
+      visibility: visible;
+    }
   </style>
 </head>
 
@@ -195,7 +288,11 @@
         <svg class="w-4 h-4 mx-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
         </svg>
-        <span class="font-semibold text-gray-900" id="breadcrumbCampaign">Campaign: —</span>
+        <a href="#" id="breadcrumbCampaign" class="hover:text-blue-600 transition-colors">Campaign: —</a>
+        <svg class="w-4 h-4 mx-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+        </svg>
+        <span class="font-semibold text-gray-900">Ad Groups</span>
       </nav>
     </div>
 
@@ -232,7 +329,7 @@
       </a>
     </li>
     <li>
-      <a href="./AdvertiserAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
+      <a href="./CampaignsAdGroup.html" data-nav-link class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
         <img src="./assets/svgs/AdGroups.svg" class="w-6 h-6 mr-2" alt="Ad Groups">
         <span data-link-label>Ad Groups</span>
       </a>
@@ -255,21 +352,6 @@
               </div>
             </div>
             <hr class="app-divider mp-4">
-          </div>
-
-          <!-- Breadcrumbs -->
-          <div class="px-6 py-4 border-b border-gray-200 bg-gray-50">
-            <nav class="flex items-center space-x-2 text-sm" aria-label="Breadcrumb">
-              <a href="./index.html" class="text-blue-600 hover:underline">Advertisers</a>
-              <span class="text-gray-400">/</span>
-              <a href="#" id="breadcrumbAdvertiser" class="text-blue-600 hover:underline">Advertiser</a>
-              <span class="text-gray-400">/</span>
-              <a href="#" id="breadcrumbCampaigns" class="text-blue-600 hover:underline">Campaigns</a>
-              <span class="text-gray-400">/</span>
-              <a href="#" id="breadcrumbCampaign" class="text-blue-600 hover:underline">Campaign</a>
-              <span class="text-gray-400">/</span>
-              <span class="text-gray-600 font-medium">Ad Groups</span>
-            </nav>
           </div>
 
           <!-- Page Header-->
@@ -1757,7 +1839,7 @@ window.addEventListener('DOMContentLoaded', () => {
       // Update breadcrumb advertiser name and link
       const breadcrumbAdvertiser = document.getElementById('breadcrumbAdvertiser');
       if (breadcrumbAdvertiser) {
-        breadcrumbAdvertiser.textContent = advertiser.name || 'Advertiser';
+        breadcrumbAdvertiser.textContent = `Advertiser: ${advertiser.name || 'Unknown'}`;
         breadcrumbAdvertiser.href = `./WFAdvertiserDetails.html?id=${encodeURIComponent(advertiser.id)}`;
       }
       
@@ -1771,7 +1853,7 @@ window.addEventListener('DOMContentLoaded', () => {
     // Update breadcrumb campaign name and link
     const breadcrumbCampaign = document.getElementById('breadcrumbCampaign');
     if (breadcrumbCampaign && campaignId && campaignName) {
-      breadcrumbCampaign.textContent = campaignName;
+      breadcrumbCampaign.textContent = `Campaign: ${campaignName}`;
       breadcrumbCampaign.href = `./CampaignDetails.html?campaignId=${encodeURIComponent(campaignId)}&campaignName=${encodeURIComponent(campaignName)}`;
     }
   } catch (e) {
