ad group connections breadcrumb - reset 2

--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -546,15 +546,15 @@
                 <label class="block text-sm font-bold text-gray-700 mb-2">DSP (Data Service Provider)</label>
                 <div class="flex flex-wrap gap-2">
                   <label class="flex items-center space-x-2 bg-white border border-gray-300 rounded-lg px-3 py-2 hover:border-blue-300 cursor-pointer transition-colors">
-                    <input type="checkbox" id="dsp-trade-desk" name="dsp" value="trade-desk" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+                    <input type="checkbox" id="dsp-trade-desk" name="dsp" value="Trade Desk" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
                     <span class="text-sm font-medium text-gray-700">The Trade Desk</span>
                   </label>
                   <label class="flex items-center space-x-2 bg-white border border-gray-300 rounded-lg px-3 py-2 hover:border-blue-300 cursor-pointer transition-colors">
-                    <input type="checkbox" id="dsp-dv360" name="dsp" value="dv360" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+                    <input type="checkbox" id="dsp-dv360" name="dsp" value="DV360" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
                     <span class="text-sm font-medium text-gray-700">DV360</span>
                   </label>
                   <label class="flex items-center space-x-2 bg-white border border-gray-300 rounded-lg px-3 py-2 hover:border-blue-300 cursor-pointer transition-colors">
-                    <input type="checkbox" id="dsp-simplifi" name="dsp" value="simplifi" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
+                    <input type="checkbox" id="dsp-simplifi" name="dsp" value="Simplifi" class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
                     <span class="text-sm font-medium text-gray-700">Simplifi</span>
                   </label>
                 </div>
@@ -565,7 +565,7 @@
                 <label class="block text-sm font-bold text-gray-700 mb-2">Ad Server</label>
                 <div class="flex flex-wrap gap-2">
                   <label class="flex items-center space-x-2 bg-white border border-gray-300 rounded-lg px-3 py-2 hover:border-green-300 cursor-pointer transition-colors">
-                    <input type="checkbox" id="adserver-gcm" name="adserver" value="google-campaign-manager" class="h-4 w-4 text-green-600 focus:ring-green-500 border-gray-300 rounded">
+                    <input type="checkbox" id="adserver-gcm" name="adserver" value="Google Campaign Manager" class="h-4 w-4 text-green-600 focus:ring-green-500 border-gray-300 rounded">
                     <span class="text-sm font-medium text-gray-700">Google Campaign Manager</span>
                   </label>
                 </div>
