--- a/WFAdvertiserDetails.html
+++ b/WFAdvertiserDetails.html
@@ -271,46 +271,52 @@
                 
                 <!-- Beacon Fields -->
                 <section class="space-y-2">
-                  <div class="bg-white border border-blue-200 rounded-lg shadow-sm">
-                    <div class="bg-gradient-to-r from-blue-50 to-blue-100 px-3 py-2 border-b border-blue-200 rounded-t-lg">
-                      <h4 class="font-semibold text-blue-900 text-sm uppercase tracking-wide">Beacon Fields</h4>
-                    </div>
-                    <div class="p-3">
-                      <table class="w-full text-sm adgroup-details-table">
-                        <tbody>
-                          <tr>
-                            <td class="py-1 pr-3 text-gray-600 font-semibold" style="width: 40%;">ID:</td>
-                            <td class="py-1">
-                              <span id="displayAdvertiserId" data-bind="adv.id" class="text-gray-900">—</span>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td class="py-1 pr-3 text-gray-600 font-semibold">Account #:</td>
-                            <td class="py-1">
-                              <span id="accountDisplay" data-bind="adv.account" class="hidden text-gray-900">—</span>
-                              <button id="accountLookupBtn" class="text-sm text-blue-600 hover:text-blue-800 underline">Select Account</button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td class="py-1 pr-3 text-gray-600 font-semibold">Name:</td>
-                            <td class="py-1">
-                              <span id="displayAdvertiserName" data-bind="adv.name" class="text-gray-900">—</span>
-                              <input id="inputAdvertiserName" type="text" data-bind="adv.name" class="hidden adgroup-details-input">
-                            </td>
-                          </tr>
-                          <tr>
-                            <td class="py-1 pr-3 text-gray-600 font-semibold">State:</td>
-                            <td class="py-1">
-                              <span id="displayState" data-bind="adv.state" class="text-gray-900">—</span>
-                              <select id="inputState" data-bind="adv.state" class="hidden adgroup-details-input w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-300">
-                                <option value="Active">Active</option>
-                                <option value="Inactive">Inactive</option>
-                              </select>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
+                  <div class="overflow-x-auto border border-default rounded-md">
+                    <table class="w-full tbl tbl-row-hover table-fixed adgroup-details-table">
+                      <colgroup>
+                        <col class="w-1/3">
+                        <col class="w-2/3">
+                      </colgroup>
+                      <thead class="tbl-head">
+                        <tr>
+                          <th colspan="2" class="px-6 py-2 text-left text-sm font-medium text-gray-700 uppercase tracking-wider">
+                            BEACON FIELDS
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody class="divide-y border-default">
+                        <tr class="border-b border-default">
+                          <td class="px-3 py-1 text-sm font-medium border-r border-default">ID</td>
+                          <td class="px-6 py-1 text-sm">
+                            <span id="displayAdvertiserId" data-bind="adv.id" class="text-gray-800 break-words">—</span>
+                          </td>
+                        </tr>
+                        <tr class="border-b border-default">
+                          <td class="px-3 py-1 text-sm font-medium border-r border-default">Account #</td>
+                          <td class="px-6 py-1 text-sm">
+                            <span id="accountDisplay" data-bind="adv.account" class="hidden text-gray-800 break-words">—</span>
+                            <button id="accountLookupBtn" class="text-sm text-blue-600 hover:text-blue-800 underline">Select Account</button>
+                          </td>
+                        </tr>
+                        <tr class="border-b border-default">
+                          <td class="px-3 py-1 text-sm font-medium border-r border-default">Name</td>
+                          <td class="px-6 py-1 text-sm">
+                            <span id="displayAdvertiserName" data-bind="adv.name" class="text-gray-800 break-words">—</span>
+                            <input id="inputAdvertiserName" type="text" data-bind="adv.name" class="hidden adgroup-details-input">
+                          </td>
+                        </tr>
+                        <tr class="border-b border-default">
+                          <td class="px-3 py-1 text-sm font-medium border-r border-default">State</td>
+                          <td class="px-6 py-1 text-sm">
+                            <span id="displayState" data-bind="adv.state" class="text-gray-800 break-words">—</span>
+                            <select id="inputState" data-bind="adv.state" class="hidden adgroup-details-input w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-300">
+                              <option value="Active">Active</option>
+                              <option value="Inactive">Inactive</option>
+                            </select>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
                   </div>
                 </section>
 
